--- a/composer.json
+++ b/composer.json
@@ -6,16 +6,17 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "barryvdh/laravel-ide-helper": "^2.6",
         "doctrine/dbal": "^2.6",
         "fideloper/proxy": "~3.3",
+        "intervention/image": "dev-master",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0",
-        "intervention/image": "dev-master"
+        "laravel/tinker": "~1.0"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "^2.4",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
+        "laravel/homestead": "^9.2",
         "mockery/mockery": "~1.0",
         "phpunit/phpunit": "~5.7"
     },
